fix frontend height overflow issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,13 +6,13 @@
 #main-section{
   width: 100%;
   display: flex;
-  min-height: 700px;
+  height: 77%;
 }
 
 footer{
   background-color: var(--bg);
   color: var(--txt);
-  height: 100%;
+  height: 16%;
 }
 
 
