--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 #header{
-    height: 80px;
+    height: 7%;
     display: flex;
     align-items: center;
     justify-content: space-between;
